# neon-serde

./: Cargo.toml
src/: de.rs  errors.rs  lib.rs  ser.rs
test/native/src/: lib.rs
test_macro/native/: Cargo.toml
