[package]
name = "test"
version = "0.1.0"
authors = ["Gabriel Castro <dev@GabrielCastro.ca>"]
license = "MIT"
publish = false

[lib]
name = "test"
crate-type = ["dylib"]

[dependencies]
neon =  { version = "0.8", features = [ "napi-6" ], default-features = false }
neon-serde = { path = "../../" }
serde_derive = "1.0.106"
serde = "1.0.106"
serde_bytes = "0.11.3"

[profile.dev]
codegen-units = 4
lto = false

[profile.release]
codegen-units = 4
lto = false
